pkgdatadir = $(datadir)/@PACKAGE@/templates

dist_pkgdata_DATA = \
			directx.png \
			directx.template \
			directx_gcc.cbp \
			directx_main.cpp \
			directx_vctk.cbp \
			dll-main.cpp \
			dll.cbp \
			dll.template \
			fltk-main.cpp \
			fltk.cbp \
			fltk.png \
			fltk.template \
			fluid-main.cpp \
			fluid-main_ui.cxx \
			fluid-main_ui.h \
			fluid.cbp \
			fluid.template \
			glfw-static.cbp \
			glut.cbp \
			glut.template \
			gui.png \
			irrlicht.template \
			irr_gcc.cbp \
			irr_vctk.cbp \
			ogre.template \
			ogre_gcc.cbp \
			ogre_vctk.cbp \
			opengl-main.cpp \
			opengl.cbp \
			opengl.png \
			opengl.template \
			sdlapp.cbp \
			SmartWin-main.cpp \
			SmartWin.cbp \
			SmartWin.png \
			SmartWin.template \
			win32-main.cpp \
			win32.cbp \
			win32gui.template \
			wxwidgets.cbp \
			wxwidgets.template \
			wxwidgets_static.cbp \
			wxwidgets_static_u.cbp \
			wxwidgets_u.cbp
